<resources>
  <string name="app_name">Football Match</string>

  <string name="logo_team_home">Logo Team Home</string>
  <string name="logo_team_away">Logo Team Away</string>
  <string name="_0">0</string>
  <string name="goals">Goals</string>
  <string name="lineups">Lineups</string>
  <string name="goal_keeper">Goal Keeper</string>
  <string name="defense">Defense</string>
  <string name="midfield">Midfield</string>
  <string name="forward">Forward</string>
  <string name="substitutes">Substitutes</string>
  <string name="stripes">-</string>
  <string name="vs">VS</string>
  <string name="favorites">Favorites</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="title_activity_player_detail">PlayerDetailActivity</string>
  <string name="player">Player</string>
  <string name="description">Description</string>
  <string name="year">Year</string>
  <string name="stadium">Stadium</string>
  <string name="position">Position</string>
  <string name="weight">Weight</string>
  <string name="height">Height</string>
  <string name="deskripsi">Deskripsi</string>
  <string name="date_deleted">Data deleted!</string>
  <string name="added_to_favorite">Added to Favorite!</string>
  <string name="english_premier_league">English Premier League</string>
  <string name="id_english_premier_league">4328</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
